--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "store",
   "version": "0.0.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -17,13 +17,11 @@
     "eslint-config-custom": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "store": "workspace:*",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@mantine/core": "^6.0.16",
-    "@mantine/hooks": "^6.0.16",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "zustand": "^4.3.9"
   }
 }
